--- a/pytest.ini
+++ b/pytest.ini
@@ -2,5 +2,5 @@
 pythonpath = .
 testpaths = tests
 
-# Enable coverage reporting
-addopts = --cov=calculator --cov-report=term-missing
+# Enable coverage reporting for app/calculator
+addopts = --cov=app/calculator --cov-report=term-missing
